[package]
name = "skrcime"
version = "0.1.0"
authors = ["Nil Gradisnik <nil.gradisnik@gmail.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
dotenv = "0.10"
dotenv_codegen = "0.11"
bcrypt = "0.1"
tera = "0.11"
validator = "0.6"
validator_derive = "0.6"
rand = "0.5"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.3"
default-features = false
features = ["postgres", "chrono"]

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["json", "tera_templates"]

[dev-dependencies]
stainless2 = "0.1"
